<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
tools:context=".MyRewards">
<!-- put whatever view group you want here instead of the FrameLayou -->

    <!-- put whatever view group you want here instead of the FrameLayou -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/my_rewards_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/my_rewards"
            android:textColor="@color/black_text"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reward_button" />

        <Button
            android:id="@+id/add_award"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_reward_title"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/my_rewards_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/my_rewards_id"
            app:layout_constraintTop_toTopOf="@+id/my_rewards_id" />




        <Button
            android:id="@+id/event_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/event_button"
            app:layout_constraintEnd_toStartOf="@+id/reward_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/reward_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/reward_event"
            app:layout_constraintEnd_toStartOf="@+id/news_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/event_button"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/news_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/go_to_news"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/reward_button"
            app:layout_constraintTop_toTopOf="parent" />


        <!-- bottom top menu -->

        <Button
            android:id="@+id/approved_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/approved_title"
            app:layout_constraintEnd_toStartOf="@+id/reward_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/my_rewards_id" />


        <Button
            android:id="@+id/pending_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/pending_title"
            app:layout_constraintBottom_toBottomOf="@+id/approved_id"
            app:layout_constraintEnd_toStartOf="@+id/news_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/event_button"
            app:layout_constraintTop_toTopOf="@+id/approved_id" />


        <Button
            android:id="@+id/rejected_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/rejected_title"
            app:layout_constraintBottom_toBottomOf="@+id/pending_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/reward_button"
            app:layout_constraintTop_toBottomOf="@+id/my_rewards_id" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/my_rewards_list"
            android:layout_width="400dp"
            android:layout_height="550dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:clipToPadding="false"
            android:padding="6dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pending_id"
            app:layout_constraintVertical_bias="0.423"
            tools:listitem="@layout/my_reward_card_view" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>