<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Approve">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/mainView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".Approve"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="100dp">

            <LinearLayout
                android:id="@+id/topView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/backButton"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/back_arrow"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/back_button_text"
                    />

                <TextView
                    android:id="@+id/appTitle"
                    style="@style/AppTitle"
                    android:layout_width="127dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="105dp"
                    android:layout_marginLeft="105dp"
                    android:text="@string/app_name"
                    />

                <Button
                    android:id="@+id/signButton"
                    style="@style/TopButton"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="35dp"
                    android:layout_marginLeft="35dp"
                    android:text="@string/sign_up_text"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttons"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/eventButton"
                    style="@style/MidButton"
                    android:layout_width="140dp"
                    android:layout_height="match_parent"
                    android:text="@string/events_admin"
                    />

                <Button
                    android:id="@+id/rewardButton"
                    style="@style/MidButton"
                    android:layout_width="140dp"
                    android:layout_height="match_parent"
                    android:text="@string/rewards_admin"
                    />

                <Button
                    android:id="@+id/newsButton"
                    style="@style/MidButton"
                    android:layout_width="140dp"
                    android:layout_height="match_parent"
                    android:text="@string/news_admin"
                    />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/myEvents"
                    style="@style/PageTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="19dp"
                    android:layout_marginRight="19dp"
                    android:text="@string/my_events"
                    app:layout_constraintEnd_toStartOf="@+id/eventAdder"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/eventAdder"
                    style="@style/BlueButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="7dp"
                    android:layout_marginRight="7dp"
                    android:layout_marginBottom="6dp"
                    android:text="@string/add_event"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.core.widget.NestedScrollView
                android:id="@+id/scroller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:overScrollMode="never">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/eventList"
                    android:layout_width="377dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/right_angle_border"
                    android:layout_gravity="center"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/list_item_event" />
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>