<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
tools:context=".EventList">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <Button
        android:id="@+id/event_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/event_button"
        app:layout_constraintEnd_toStartOf="@+id/reward_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/reward_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/reward_event"
        app:layout_constraintEnd_toStartOf="@+id/news_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/event_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/news_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/go_to_news"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/reward_button"
        app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>